@@ -1,3 +1,9 @@
+2000-11-19  Jeffrey Stedfast  <fejj@helixcode.com>
+
+	* gmime-part.c (get_content_disposition): Append a ";" before
+	appending any parameters even when there is no disposition
+	text. Also only enter into the param loop if there exist params.
+
 2000-11-16  Jeffrey Stedfast  <fejj@helixcode.com>
 
 	* doc/sgml/*: Added.
